--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
     <div class="product-title">{{product.name}}</div>
     <div class="product-price">
       ${{product.price}}</div>
-      <button class="buy-btn">Buy Now</button>
+      <a href="/detail-page/{{product.id}}" class="buy-btn btn">View Details</a>
     </div>
     {% endfor %}
     
