--- a/templates/base.html
+++ b/templates/base.html
@@ -49,6 +49,27 @@
         </div>
       </div>
     </nav>
+    <!-- section for messages -->
+    <div>
+      {% if messages %}
+      <div class="container mt-3">
+        {% for message in messages %}
+        <div
+          class="alert alert-{{ message.tags }} alert-dismissible fade show"
+          role="alert"
+        >
+          {{ message }}
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="alert"
+            aria-label="Close"
+          ></button>
+        </div>
+        {% endfor %}
+      </div>
+      {% endif %}
+    </div>
     <!-- contents from children HTML  -->
     <div>{% block content %} {% endblock%}</div>
     <!-- Bootstrap JS Bundle CDN -->
