--- a/templates/contact_us.html
+++ b/templates/contact_us.html
@@ -3,7 +3,8 @@
 <div class="container">
   <h2>Contact Us</h2>
   <img src="{% static 'contact.jpg' %}" alt="Trying a contact us page" />
-  <form method="post" action="/contact/submit/">
+  <form method="post" action="/contact">
+    {% csrf_token %}
     <label for="name">Name</label>
     <input type="text" id="name" name="name" required />
 
