--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %} {% load static %} {% block content %}
-<div class="container">
-  <h1>About Us</h1>
+<div class="container" style="background-color: rgba(0, 0, 255, 0.342);">
+  <h1 style="text-align: center; color: black;">About Us</h1>
   <p>
-    Welcome to <span class="highlight">Patience</span>! We believe that great
+    Welcome to <span class="highlight">Dama Software Solutions!</span> We believe that great
     things take time, and our journey is a testament to the power of persistence
     and dedication.
   </p>
   <p>
-    Founded by a team of passionate creators, Patience is more than just a
+    Founded by a team of passionate creators, DSS is more than just a
     project—it's a community built on trust, growth, and meaningful connections.
     Our mission is to inspire individuals to embrace the process, celebrate
     small victories, and never lose sight of their dreams.
@@ -17,9 +17,11 @@
     invite you to join us as we continue to grow and make a positive impact
     together.
   </p>
-  <p>Thank you for being a part of our story.</p>
+    <h6>We are a small, dedicated team collaborating to build an innovative group e-commerce platform, empowering communities to buy and sell together.</h6>
+  <h5>Thank you for being a part of our story.</h5>
   <p>
-    <span class="highlight">Patience Team</span>
+    <span class="highlight">SIWES Team (2025)
+    </span>
   </p>
 </div>
 {% endblock %}
