--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -25,30 +25,25 @@
   <div class="profile-info">
     <span class="profile-label">Phone Number:</span> {{ user_profile.phone_no }}
   </div>
-  <!-- Add more fields as needed -->
 </div>
-{% endblock %} {% block extra_css %}
 <style>
-  .profile-container {
+   .profile-container {
     max-width: 500px;
     margin: 40px auto;
-    background: #fff;
     padding: 30px;
     border-radius: 8px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 100px rgba(0, 0, 0, 0.1);
   }
-  .avatar {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    object-fit: cover;
-    margin-bottom: 20px;
+   .avatar {
+    width: 500px;
+    height: 300px;
+    /* border-radius: 70%; */
+    margin-bottom: 40px;
   }
-  .profile-info {
-    margin-bottom: 10px;
-  }
+
   .profile-label {
     font-weight: bold;
+    color: black
   }
 </style>
 {% endblock %}
