--- a/templates/base.html
+++ b/templates/base.html
@@ -21,8 +21,14 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Dama Software Solution</a>
         <button
-          class="navbar-toggler"type="button"data-bs-toggle="collapse"data-bs-target="#navbarNav"
-          aria-controls="navbarNav"aria-expanded="false"aria-label="Toggle navigation">
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -36,9 +42,18 @@
             <li class="nav-item">
               <a class="nav-link" href="/contact">Contact</a>
             </li>
+            {% if request.user.is_authenticated %}
+            <li class="nav-item">
+              <a class="nav-link" href="/user-profile">Profile</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/logout">Logout</a>
+            </li>
+            {% else %}
             <li class="nav-item">
               <a class="nav-link" href="/login">Login</a>
             </li>
+            {% endif %}
           </ul>
         </div>
       </div>
