--- a/templates/register.html
+++ b/templates/register.html
@@ -153,6 +153,69 @@
           </ul>
           {% endif %}
         </div>
+        <div class="form-group">
+          <label for="phone_no">Phone Number</label>
+          <input
+            type="text"
+            id="phone_no"
+            name="phone_no"
+            required
+            placeholder="Enter your phone number"
+            value="{{ request.POST.phone_no|default:'' }}"
+          />
+          {% if errors.phone_no %}
+          <ul class="errorlist">
+            {% for error in errors.phone_no %}
+            <li>{{ error }}</li>
+            {% endfor %}
+          </ul>
+          {% endif %}
+        </div>
+        <div class="form-group">
+          <label for="address">Address</label>
+          <input
+            type="text"
+            id="address"
+            name="address"
+            required
+            placeholder="Enter your address"
+            value="{{ request.POST.address|default:'' }}"
+          />
+          {% if errors.address %}
+          <ul class="errorlist">
+            {% for error in errors.address %}
+            <li>{{ error }}</li>
+            {% endfor %}
+          </ul>
+          {% endif %}
+        </div>
+        <div class="form-group">
+          <label for="image">Profile Image</label>
+          <input type="file" id="image" name="image" accept="image/*" />
+          {% if errors.image %}
+          <ul class="errorlist">
+            {% for error in errors.image %}
+            <li>{{ error }}</li>
+            {% endfor %}
+          </ul>
+          {% endif %}
+        </div>
+        <div class="form-group">
+          <label for="is_vendor">
+            <input
+              type="checkbox"
+              id="is_vendor"
+              name="is_vendor"
+              {%
+              if
+              request.POST.is_vendor
+              %}checked{%
+              endif
+              %}
+            />
+            Register as Vendor
+          </label>
+        </div>
         <button type="submit" class="register-btn">Register</button>
       </form>
       <a href="{% url 'login' %}" class="login-link"
