--- a/templates/detail_page.html
+++ b/templates/detail_page.html
@@ -10,6 +10,7 @@
       <p class="price">${{ product.price }}</p>
       <p class="description">{{ product.description }}</p>
       <form method="post" action="/add-to-cart/{{ product.id }}/">
+        {% csrf_token %}
         <button type="submit">Add to Cart</button>
       </form>
     </div>
