--- a/templates/base.html
+++ b/templates/base.html
@@ -55,6 +55,7 @@
             </li>
             {% endif %}
           </ul>
+          <a href="/cart">Cart</a>
         </div>
       </div>
     </nav>
